# Sun-Earth-Moon-System

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
include/: camera.hpp  shader.hpp  sphere.h  utils.hpp
shader/: fragShader.glsl  vertShader.glsl
src/: camera.cpp  main.cpp  shader.cpp  sphere.cpp
